# XMU-learning_RL

./: .gitignore
Essay/: checklist.tex  main.tex  neurips_2026.sty  neurips_2026.tex
Essay/TEMP/: .gitignore
HW/: 0319.md  0409.md
HW/.obsidian/: workspace.json
Lab/: pyproject.toml  setup-gym.sh
Lab/0326/: 第4章-动态规划算法.ipynb
Lab/0416/: 第6章-Dyna-Q算法.ipynb
Lab/0507/: 第8章-DQN改进算法.ipynb
