[project]
name = "XMU-learning_RL"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Exxon", email = "exxonliu001@yahoo.com"},
]
dependencies = ["ipykernel>=7.2.0", "numpy>=2.4.3", "scipy>=1.17.1", "matplotlib>=3.10.8", "tqdm>=4.67.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
